@@ -1,45 +1,0 @@
-﻿http://www.nvidia.co.uk/Download/processDriver.aspx?psid=98&pfid=756&rpf=1&osid=56&lid=17&lang=en-uk&ctk=0
-http://www.nvidia.co.uk/Download/processDriver.aspx?psid=98&pfid=755&rpf=1&osid=57&lid=17&lang=en-uk&ctk=0
-
-osid:
-win10 amd64: 57
-win10 x86: 56
-
-win8.1< amd64: 41
-win8.1< x86: 40
-emulate rest
-
-
-psid: 
-gtx 970: 98
-emulate rest
-
-pfid:
-gtx 970: 756
-emulate rest
-
-
-rpf:
-1 default?
-
-lid: language
-other: 17
-ENGLISH us: 1
-ENGLISH uk: 2
-ENGLISH india: 3
-chinese simple: 5
-CHINSSE traditional: 6
-japanese: 7
-korean: 8
-deutsch: 9
-espanol espna: 10
-espanol america latina: 11
-francais: 12
-italiano: 13
-polski: 14
-portugues brazil: 15
-russia: 16
-turkish: 19
-
-ctk:
-0 default?
