@@ -5,6 +5,11 @@ All notable changes to this project will be documented in this file.
 ### Added
 - Missing author in assembly information.
 - Support mobile NVIDIA GPUs.
+- New argument - "--eraseConfig", erases configuration file.
+- Improved config system.
+
+### Changed
+- Minor cleanup.
 
 ## [1.1.0.0] - 2016-05-31
 ### Added
